--- a/theme/assets/scss/header.scss
+++ b/theme/assets/scss/header.scss
@@ -8,7 +8,6 @@ header {
   width: 100%;
   z-index: 1003;
   background-color: $header_bg;
-  padding-top: 1.5rem;
   border-bottom: $header_border;
 }
 
@@ -94,7 +93,8 @@ DESKTOP
 */
 .primary-nav {
   text-align: center;
-  padding-bottom: 0.75rem;
+	padding-bottom: 0.75rem;
+	align-items: center;
 }
 .primary-nav li {
   display: inline-block;
