--- a/theme/assets/scss/header.scss
+++ b/theme/assets/scss/header.scss
@@ -1,4 +1,4 @@
-$header_bg: #fff;
+$header_bg: rgb(35, 47, 62);
 $header_border: 1px solid #c8c8c8;
 
 header {
@@ -26,7 +26,10 @@ header {
   position: relative;
   display: inline-flex;
   cursor: pointer;
-  margin: 0 1.5rem 0 1.5rem;
+	margin: 0 1.5rem 0 1.5rem;
+	img {
+		filter: brightness(0) invert(1);
+	}
 }
 
 .cart-count {
@@ -52,6 +55,11 @@ header {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+}
+
+.cat-parent a {
+	color: white !important;
+	font-weight: bold;
 }
 
 @media screen and (max-width: 769px) {
@@ -100,22 +108,25 @@ DESKTOP
   display: inline-block;
   padding: 0.5rem 1.25rem;
   text-transform: uppercase;
-  font-size: 14px;
+	font-size: 14px;
+	position: relative;
 }
 .primary-nav .nav-level-1 {
-  text-align: left;
   display: none;
   position: absolute;
-  width: 100%;
-  background-color: #f5f5f5;
+  background-color: slategrey;
   z-index: 1003;
   left: 0;
-  margin-top: 0.5rem;
-  padding: 30px 20px;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.175);
+  // margin-top: 1rem;
+  padding: 20px;
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.175);
+	flex-direction: column;
+	width: 100%;
+	text-align: center;
+	border-radius: 5px;
 }
 .primary-nav li.is-active {
-  background-color: #f5f5f5;
+  background-color: $header_bg;
 }
 .primary-nav li.is-active .nav-level-1 {
   display: flex;
@@ -151,8 +162,8 @@ DESKTOP
 }
 
 .primary-nav a.is-active {
-  font-weight: 500;
-  color: #000;
+  font-weight: 800;
+  color: white;
 }
 
 /*
