--- a/public/admin-assets/css/style.css
+++ b/public/admin-assets/css/style.css
@@ -27,7 +27,7 @@ form {
 }
 
 body, button, input, select, textarea {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: 'Poppins', sans-serif;
 }
 
 h1 {
