--- a/theme/assets/scss/product.scss
+++ b/theme/assets/scss/product.scss
@@ -120,6 +120,13 @@
 .product-content a {
   text-decoration: underline;
 }
+.product-item {
+	border-radius: 8px;
+	box-shadow: 0 0 9px rgba(0,0,0,0.15);
+	background-color: #ffffff;
+	margin: 10px;
+	padding: 20px;
+}
 
 /*
 Mobile
