--- a/theme/assets/scss/header.scss
+++ b/theme/assets/scss/header.scss
@@ -5,7 +5,9 @@ header {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+	width: 100%;
+	height: 80px;
+	background-image: linear-gradient(180deg, #3d8ef6 0%, #2479e7 100%);
   z-index: 1003;
   background-color: $header_bg;
   border-bottom: $header_border;
@@ -254,45 +256,79 @@ body.search-active .mobile-nav {
   color: #ff3860;
 }
 
-.search-box {
-  background-color: #f5f5f5;
-  transition: all 200ms ease-in-out;
-  padding-left: 30px;
-  padding-right: 30px;
-  position: relative;
+.search-content {
+	box-sizing: border-box;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  border-radius: 4px;
-  width: 100%;
-  box-shadow: none;
+	position: relative;
+	box-sizing: border-box;
+
+  fieldset {
+    outline: 0;
+    border: 0;
+    position: relative;
+  }
+
+  #search-bar {
+    height: 36px;
+    width: 36px;
+    padding: 10px;
+    font-size: 16px;
+    color: #666;
+    border-radius: 40px;
+    transition: all, 0.5s;
+		border: 0;
+
+    &:focus {
+      outline: 0;
+      width: 280px;
+      &::-webkit-input-placeholder {
+        opacity: 1;
+			}
+			padding: 0 40px;
+    }
+
+    &::-webkit-input-placeholder {
+      opacity: 0;
+      font-size: 16px;
+      color: #666;
+      width: 1px;
+    }
+
+  }
+
+  .search-icon-container {
+      position: absolute;
+      top: 0px;
+      left: 5px;
+      width: 36px;
+      height: 36px;
+      cursor: pointer;
+      #search-icon {
+        position: relative;
+        top: 8px;
+        left: 5px;
+        width: 14px;
+        height: 14px;
+        border-radius: 7px;
+        border: 2px solid #7759F8;
+        &:after {
+          content: "";
+          position: absolute;
+          bottom: -8px;
+          right: -2px;
+          width: 2px;
+          border-radius: 2px;
+          transform: rotate(-35deg);
+          height: 10px;
+          background-color: #7759F8;
+        }
+      }
+		}
 }
 
-.search-box.has-focus {
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-}
-
-.search-icon-search, .search-icon-clear {
-  cursor: pointer;
-  position: absolute;
-  width: 14px;
-  height: 14px;
-}
-
-.search-icon-search {
-  left: 8px;
-}
-
-.search-icon-clear {
-  right: 8px;
-}
-
-.search-input {
-  background-color: transparent;
-  border: none;
-  outline: none;
-  height: 3rem;
-  width: 100%;
-}
 
 @media screen and (max-width: 769px) {
   .search-box {
