--- a/theme/assets/scss/theme.scss
+++ b/theme/assets/scss/theme.scss
@@ -16,7 +16,7 @@ $breadcrumb-item-separator-color: #7a7a7a;
 $ig-blue: #636363 !default;
 @import "~react-image-gallery/styles/scss/image-gallery-no-icon.scss";
 @import "~react-table/react-table.css";
-
+// @import "~react-select/dist/react-select.css";
 .image-gallery-bullets .image-gallery-bullets-container {
   background-color: rgba(0,0,0,0.2);
   padding: 4px 0;
